[workspace]
package.version = "0.0.5"
package.license = "Apache-2.0"

members = ["rust/*"]
exclude = ["rust/test_schema_store"]
resolver = "2"

[workspace.dependencies]
derive_more = { version = "2.0.1" }
log = { version = "0.4.26" }
ordermap = { version = "1.2.0" }
pyo3 = { version = "0.27.2" }
pyo3-build-config = { version = "0.27.2" }
pyo3-log = { version = "0.13.1" }
fancy-regex = { version = "0.18" }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.135" }
serde_yaml = { version = "0.9.33" }

[profile.release]
# debug = true

[profile.release-lto]
inherits = "release"
lto = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"
deprecated = "deny"
semicolon_in_expressions_from_macros = "deny"
rust_2024_compatibility = { level = "deny", priority = -1 }

[workspace.lints.clippy]
# Pedantic group
pedantic = { level = "deny", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_docs_in_private_items = "allow"

# Restriction group
allow_attributes_without_reason = "deny"
as_conversions = "deny"
create_dir = "deny"
dbg_macro = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
expect_used = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
infinite_loop = "deny"
integer_division_remainder_used = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
mixed_read_write_in_expression = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
needless_raw_strings = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_without_shorthand = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_same = "allow"
shadow_reuse = "allow"
shadow_unrelated = "deny"
str_to_string = "deny"
string_add = "allow"                          # TODO: discuss
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
