[project]
name = "pyavd-utils"
dynamic = ["version"]
authors=[{ name = "Arista Networks", email = "avd-dev@arista.com"}]
description="Rust based utilities used by PyAVD. Should not be used directly and may not follow semantic versioning."
readme = "README.md"
license = "Apache-2.0"
license-files = ["pyavd_utils/LICENSE", "pyavd_utils/THIRD_PARTY_LICENSES.txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
# TODO: Once we check for free-threading we can add
# Programming Language :: Python :: Free Threading
# note that it can have levels from Unstable to Resilien

keywords = ["pyavd", "pyavd-utils"]
requires-python = ">=3.10"

[project.urls]
homepage = "https://avd.arista.com"
repository = "https://github.com/aristanetworks/avd"

[build-system]
requires = [
    "setuptools>=71.0",
    "setuptools-rust>=1.12.0",
]
build-backend = "backend"
backend-path = ["_build_backend"]

[tool.distutils.bdist_wheel]
py-limited-api = "cp310"

[tool.setuptools.dynamic]
version = {attr = "pyavd_utils.__version__"}

[tool.setuptools.packages.find]
include = ["pyavd_utils"]

[tool.setuptools.package-data]
"pyavd_utils" = ["*.pyi", "THIRD_PARTY_LICENSES.txt"]

[[tool.setuptools-rust.ext-modules]]
target = "pyavd_utils.passwords"
path = "rust/pypasswords/Cargo.toml"
binding = "PyO3"

[[tool.setuptools-rust.ext-modules]]
target = "pyavd_utils.validation"
path = "rust/pyvalidation/Cargo.toml"
binding = "PyO3"

[dependency-groups]
pytest = [
    "pytest>=8.2.0",
]
coverage = [
    "coverage[toml]==7.13.5",
]
# group used to build cross platform wheels
build_wheel = [
    "cibuildwheel==3.3.0; python_version >= '3.11'",
]
dev = [
  "bump-my-version>=1.3.0",
]

# -------------------------------------- #
# cibuildwheel configuration
# -------------------------------------- #
[tool.cibuildwheel]
skip = [
    "cp38-*",
    "cp39-*",
    "*-win32",
    "*-musllinux_i686",
    "*_i686",
    "cp3??t-*", # for now building with cp310 which does not work with free threading
]

before-all = "uname -a"

[tool.cibuildwheel.linux]
before-build = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]

[tool.cibuildwheel.linux.environment]
PATH = "$HOME/.cargo/bin:$PATH"

[tool.cibuildwheel.macos]
before-build = "rustup target add x86_64-apple-darwin"
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "pipx run abi3audit --strict --report {wheel}",
]

[tool.cibuildwheel.macos.environment]
# Needed for intel wheel as otherwise cibuildwheel use 10.9 which does not work for Rust
MACOSX_DEPLOYMENT_TARGET = "10.12"

[tool.cibuildwheel.windows]
repair-wheel-command = [
  "copy {wheel} {dest_dir}",
  "pipx run abi3audit --strict --report {wheel}",
]
[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
# D213 is forced here since it will be removed by pydocstyle.convention = 'google' even when we have ALL here.
extend-select = ["ALL", "D213"]
ignore = [
  "D203",     # Ignoring conflicting D* warnings - one-blank-line-before-class
  "D212",     # Ignoring conflicting D* warnings - multi-line-summary-first-line
  "COM812",   # Ignoring conflicting rules that may cause conflicts when used with the formatter
  "ISC001",   # Ignoring conflicting rules that may cause conflicts when used with the formatter
  "TD002",    # We don't have require authors in TODO
  "TD003",    # We don't have an issue link for all TODOs today
  "FIX002",   # Line contains TODO - ignoring for ruff for now
  "SLF001",   # Accessing private members - TODO: Improve code
  "D100",     # Missing docstring in public module - TODO: Improve code
  "D101",     # Missing docstring in public class - TODO: Improve code
  "D102",     # Missing docstring in public method - TODO: Improve code
  "D103",     # Missing docstring in public function - TODO: Improve code
  "D104",     # Missing docstring in public package
  "D105",     # Missing docstring in magic method - TODO: Improve code
  "D106",     # Missing docstring in public nested class - TODO: Improve code
  "D107",     # Missing docstring in `__init__` - TODO: Improve code
  "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed - TODO: Improve code
  "C901",     # complex-structure - TODO: Improve code
  "FBT001",   # Boolean-typed positional argument in function definition - TODO: Improve code
  "FBT002",   # Boolean default positional argument in function definition - TODO: Improve code
  "PD011",    # Use numpy instead of .values - False positive
  "BLE001",   # Do not catch blind exception: `Exception - TODO: Improve code
  "PLR2004",  # Magic value used in comparison - TODO: Evaluate
  "DTZ005",   # `datetime.datetime.now()` called without a `tz` argument - TODO: Improve code
  "ASYNC109", # async-function-with-timeout: Our async functions call several other async functions and we need each of those calls to be governed by the configurable timeout.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = [
  "S101",   # Accept 'assert' in pytest.
  "INP001", # implicit namespace package. Add an `__init__.py` - Tests are not in packages
  "PLC0415", # `import` should be at the top-level of a file
]
"_build_backend/*" = [
  "INP001", # Not a package, just a build backend module
  "T201",   # Allow print statements for build output
  "S603",   # Allow subprocess calls - inputs are trusted
]

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 54
max-returns = 10
max-statements = 148

[tool.ruff.lint.isort]
# TODO: check if needed
known-first-party = ["pyavd_utils"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
exclude = [
  # Excluded
  ".tox",
  ".github",
]
pythonVersion = "3.10"

reportMissingImports = "error"

[tool.pytest.ini_options]

[tool.coverage.run]
branch = true
parallel = true
source = [
  "pyavd_utils",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
# Regexes for lines to exclude from consideration
exclude_also = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain about TYPE_CHECKING blocks
    "if TYPE_CHECKING:",
    # Ignore typing overloads
    "@overload",
]

[tool.bumpversion]

current_version = "0.0.5-dev1"

allow_dirty = true
commit = false
tag = false
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.pre_l]
values = [
  "dev",
  "final",
]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'package.version = "{current_version}"'
replace = 'package.version = "{new_version}"'

### Bumping version using PEP440 style like x.y.z.dev1

[[tool.bumpversion.files]]
filename = "pyavd_utils/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        \\.                           # dot separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
        (?P<pre_n>0|[1-9]\\d*)        # pre-release version number
    )?                                # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}.{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
