[package]
name = "avdschema"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dev-dependencies]
test_schema_store = { path = "../test_schema_store" }

[dependencies]
derive_more = { workspace = true, features = [
    "constructor",
    "display",
    "from",
] }
flate2 = { version = "1.1.0" }
ordermap = { workspace = true, features = ["serde"] }
fancy-regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { version = "3.20.0" }
serde_yaml = { workspace = true }
walkdir = { version = "2.5.0", optional = true }
xz2 = { version = "0.1.7", optional = true }

[features]
dump_load_files = ["dep:walkdir"]
xz2 = ["dump_load_files", "dep:xz2"]
