[package]
name = "passwords"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[features]
default = ["cbc", "sha512", "simple-7"]
cbc = ["dep:cbc", "dep:cipher", "dep:des", "dep:base64"]
sha512 = ["dep:sha-crypt"]
simple-7 = ["dep:getrandom", "dep:hex"]

[dependencies]
derive_more = { workspace = true, features = ["display", "from"]}
# sha512 feature
sha-crypt = { version = "0.5.0", default-features = false , optional = true}
# cbc feature
cbc = { version = "0.1.0", default-features = false , optional = true}
cipher = { version = "0.4.4", default-features = false, features = ["block-padding"] , optional = true}
des = { version = "0.8.0", default-features = false , optional = true}
base64 = { version = "0.22.1", default-features = false , features = ["std"], optional = true}
# simple-7 feature
hex = { version = "0.4", default-features = false, features = ["std"], optional = true}
getrandom = { version = "0.4", default-features = false, optional = true }
