[package]
name = "pyvalidation"
version.workspace = true
edition = "2024"
license.workspace = true

[build-dependencies]
pyo3-build-config = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7.0" }
test_schema_store = { path = "../test_schema_store" }

[dependencies]
avdschema = { path = "../avdschema", features = ["dump_load_files"] }
validation = { path = "../validation" }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
serde_json = { workspace = true, features = [
    "arbitrary_precision", # To support very big numbers
    "preserve_order",
] }

[target.'cfg(pyavd_stubgen)'.dependencies]
pyo3-stub-gen = { workspace = true }
pyo3-stub-gen-derive = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/abi3-py310"]
stubgen = []

[[bench]]
name = "performance"
harness = false

[[bin]]
name = "generate_stub"
path = "src/bin/generate_stub.rs"
required-features = ["stubgen"]
