[package]
name = "pyvalidation"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[build-dependencies]
pyo3-build-config = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.2" }
test_schema_store = { path = "../test_schema_store" }

[dependencies]
avdschema = { path = "../avdschema", features = ["dump_load_files"] }
validation = { path = "../validation" }
log = { workspace = true }
pyo3 = { workspace = true, "features" = ["abi3-py310"] }
pyo3-log = { workspace = true }
serde_json = { workspace = true, features = [
    "arbitrary_precision", # To support very big numbers
    "preserve_order",
] }

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "performance"
harness = false
