[package]
name = "validation"
version.workspace = true
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
avdschema = { path = "../avdschema" }
derive_more = { workspace = true, features = ["display", "from"] }
log = { workspace = true }
ordermap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision", # To support very big numbers
    "preserve_order",
] }
yaml-parser = { path = "../yaml-parser", features = ["avdschema"] }

[lib]
crate-type = ["cdylib", "lib"]
